# substream

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  substreams.yaml
proto/: mydata.proto
scripts/: api.js  backfill_metadata.js  ingest.js  run_ingest_macos.sh  schema.sql
src/: lib.rs  stable_mints.txt
src/pb/: .last_generated_hash  mydata.v1.rs
