[package]
name = "solana_graph"
version = "0.0.1"
edition = "2021"

[lib]
name = "substreams"
crate-type = ["cdylib"]

[dependencies]
prost = "0.13"
prost-types = "0.13"
substreams = "0.7"
substreams-solana = "0.14"
base64 = "0.22"
bs58 = "0.5"
solana-program = "1.18"

[profile.release]
lto = true
opt-level = 's'
strip = "debuginfo"
